[gd_scene load_steps=2 format=3 uid="uid://lobby001"]

[ext_resource type="Script" path="res://scripts/lobby/lobby.gd" id="1"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.1, 0.16, 1)

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="UsernameLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Player"

[node name="GoldLabel" type="Label" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold: 10000"
horizontal_alignment = 2

[node name="LogoutButton" type="Button" parent="TopBar"]
layout_mode = 2
text = "Logout"

[node name="FilterBar" type="HBoxContainer" parent="."]
layout_mode = 1
offset_top = 70.0
offset_right = 720.0
offset_bottom = 120.0
theme_override_constants/separation = 8

[node name="AllButton" type="Button" parent="FilterBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "All"
toggle_mode = true
button_pressed = true

[node name="Ante100" type="Button" parent="FilterBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "100G"
toggle_mode = true

[node name="Ante500" type="Button" parent="FilterBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "500G"
toggle_mode = true

[node name="Ante1000" type="Button" parent="FilterBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "1000G"
toggle_mode = true

[node name="RoomScroll" type="ScrollContainer" parent="."]
layout_mode = 1
offset_top = 130.0
offset_right = 720.0
offset_bottom = 1180.0

[node name="RoomList" type="VBoxContainer" parent="RoomScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="AutoMatch100" type="Button" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 60)
text = "Auto 100G"

[node name="AutoMatch500" type="Button" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 60)
text = "Auto 500G"

[node name="AutoMatch1000" type="Button" parent="BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 60)
text = "Auto 1000G"

[node name="StatusLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_bottom = -85.0
grow_horizontal = 2
grow_vertical = 0
text = ""
horizontal_alignment = 1

[connection signal="pressed" from="TopBar/LogoutButton" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="FilterBar/AllButton" to="." method="_on_filter_all"]
[connection signal="pressed" from="FilterBar/Ante100" to="." method="_on_filter_100"]
[connection signal="pressed" from="FilterBar/Ante500" to="." method="_on_filter_500"]
[connection signal="pressed" from="FilterBar/Ante1000" to="." method="_on_filter_1000"]
[connection signal="pressed" from="BottomBar/AutoMatch100" to="." method="_on_auto_match_100"]
[connection signal="pressed" from="BottomBar/AutoMatch500" to="." method="_on_auto_match_500"]
[connection signal="pressed" from="BottomBar/AutoMatch1000" to="." method="_on_auto_match_1000"]
